--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,13 @@ cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
-et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 fonttools==4.57.0
 fqdn==1.5.1
+geographiclib==2.0
+geopandas==1.0.1
+geopy==2.4.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -52,7 +54,7 @@ jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
-matplotlib==3.10.1
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mistune==3.1.3
 nbclient==0.10.2
@@ -62,21 +64,23 @@ nest-asyncio==1.6.0
 notebook==7.4.2
 notebook_shim==0.2.4
 numpy==2.2.5
-openpyxl==3.1.5
 overrides==7.7.0
 packaging==25.0
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pillow==11.2.1
-platformdirs==4.3.7
+platformdirs==4.3.8
 prometheus_client==0.21.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
 pure_eval==0.2.3
+pyarrow==20.0.0
 pycparser==2.22
 Pygments==2.19.1
+pyogrio==0.11.0
 pyparsing==3.2.3
+pyproj==3.7.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytz==2025.2
@@ -84,13 +88,16 @@ pywin32==310
 pywinpty==2.0.15
 PyYAML==6.0.2
 pyzmq==26.4.0
+RapidFuzz==3.13.0
 referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.24.0
+seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==80.3.1
+shapely==2.1.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
@@ -109,4 +116,3 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.14
-XlsxWriter==3.2.3
